<resources>
    <string name="app_name">InsuCompu</string>
    <string name="loginTitle">Inicio de Sesion</string>
    <string name="loginBtn">Iniciar Sesion</string>
    <string name="signinBtn">Registrarse</string>
    <string name="passwordTxt">Contraseña</string>
    <string name="mailTxt">Correo electronico</string>
    <string name="loginAuxTxt">¿Aún no tienes cuenta?</string>
    <string name="terms">Terminos y Condiciones</string>
    <string name="confirmPassword">Confirmar Contraseña</string>
    <string name="userName">Nombre</string>
    <string name="userSecondName">Apellido</string>
    <string name="userPhone">Telefono</string>
    <string name="userBusiness">Empresa</string>
    <string name="signinSucces">Registro Exitoso</string>
    <string name="catalog">Catalogo</string>
    <string name="search">Buscar</string>
    <string name="addProduct">Agregar Producto</string>
    <string name="saveProduct">Guardar Producto</string>
    <string name="description">Descripcion</string>
    <string name="price">Precio</string>
    <string name="disponibility">Disponibilidad</string>
    <string name="productSuccess">Producto Agregado</string>
    <string name="itemDeleted">Item Eliminado</string>
    <string name="DeleteItem">Eliminar Producto?</string>
    <string name="Delete">Eliminar</string>
    <string name="Cancel">Cancelar</string>

    <!--DESCRIPTIONS-->
    <string name="facebook_icon">Facebook</string>
    <string name="instagram_icon">Instragram</string>
    <string name="whatsapp_icon">WhatsApp</string>

    <!--LONG STRINGS-->
    <string name="terms_example">Es requisito necesario para la adquisición de los servicios que se ofrecen en este sitio, que lea y acepte los siguientes Términos y Condiciones que a continuación se redactan. El uso de nuestros servicios implicará que usted ha leído y aceptado los Términos y Condiciones de Uso en el presente documento. Todas los servicios que son ofrecidos por nuestro sitio web pudieran ser creadas, cobradas, enviadas o presentadas por una página web tercera y en tal caso estarían sujetas a sus propios Términos y Condiciones. En algunos casos, para adquirir un servicio, será necesario el registro por parte del usuario, con ingreso de datos personales fidedignos y definición de una contraseña. El usuario puede elegir y cambiar la clave para su acceso de administración de la cuenta en cualquier momento, en caso de que se haya registrado y que sea necesario para la solicitud de alguno de nuestros servicios. InsuCompu México no asume la responsabilidad en caso de que entregue dicha clave a terceros. Todas las compras y transacciones que se lleven a cabo por medio de este sitio web, están sujetas a un proceso de confirmación y verificación, el cual podría incluir la verificación y disponibilidad de producto, validación de la forma de pago, validación de la factura (en caso de existir) y el cumplimiento de las condiciones requeridas por el medio de pago seleccionado. En algunos casos puede que se requiera una verificación por medio de correo electrónico. Los precios de los servicios ofrecidos en este Sitio Web es válido solamente en las compras realizadas en este sitio web.</string>
</resources>