<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/deep_blue"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="35sp"
                android:textAlignment="center"
                android:layout_margin="35dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/loginTitle"
                android:textSize="28sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/mailTxt"
                android:labelFor="@+id/etMail"/>
            <EditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"
                android:backgroundTint="@color/light_gray"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/passwordTxt"
                android:labelFor="@id/etPassword"
                android:layout_marginTop="15dp"/>
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"
                android:backgroundTint="@color/light_gray"
                android:inputType="textPassword"
                android:autofillHints="password"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:textColor="@color/deep_blue"
                    android:text="@string/loginBtn"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/ripple_white"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/loginAuxTxt"
                    android:labelFor="@id/etPassword"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:textColor="@color/deep_blue"
                    android:text="@string/signinBtn"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/ripple_white"
                    android:padding="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical"
        android:gravity="bottom">
        <TextView
            android:id="@+id/btnTerminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp">
            <ImageButton
                android:id="@+id/facebookbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook"
                android:background="@android:color/transparent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/facebook_icon"/>
            <ImageButton
                android:id="@+id/instagrambtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/instagram"
                android:background="@android:color/transparent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/instagram_icon"/>
            <ImageButton
                android:id="@+id/whatsappbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/whatsapp"
                android:background="@android:color/transparent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/whatsapp_icon"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>