<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProduct"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_left"
            android:layout_weight="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addProduct"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/ripple_blue"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:text="@string/userName"
            android:labelFor="@+id/etProductName"/>
        <EditText
            android:id="@+id/etProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:backgroundTint="@color/dark_blue"
            android:inputType="textCapWords"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:text="@string/description"
            android:labelFor="@+id/etProductDescription"/>
        <EditText
            android:id="@+id/etProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:backgroundTint="@color/dark_blue"
            android:inputType="textCapSentences"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:text="@string/price"
            android:labelFor="@+id/etProdutPrice"/>
        <EditText
            android:id="@+id/etProdutPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:backgroundTint="@color/dark_blue"
            android:inputType="number"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:text="@string/disponibility"
            android:labelFor="@+id/etProductDisponibility"/>
        <EditText
            android:id="@+id/etProductDisponibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:backgroundTint="@color/dark_blue"
            android:inputType="number"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnSaveProduct"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@color/white"
            android:text="@string/saveProduct"
            android:layout_marginTop="20dp"
            android:background="@drawable/ripple_blue"
            android:padding="5dp"/>
    </LinearLayout>

</LinearLayout>