<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignIn"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_left"
            android:layout_weight="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signinBtn"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/ripple_blue"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:text="@string/userName"
            android:labelFor="@+id/etName"/>
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:backgroundTint="@color/dark_blue"
            android:inputType="textCapWords"
            android:autofillHints="name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:text="@string/userSecondName"
            android:labelFor="@+id/etSecondName"/>
        <EditText
            android:id="@+id/etSecondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:backgroundTint="@color/dark_blue"
            android:inputType="textCapWords"
            android:autofillHints="name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:text="@string/mailTxt"
            android:labelFor="@+id/etMail"/>
        <EditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:backgroundTint="@color/dark_blue"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:text="@string/userPhone"
            android:labelFor="@+id/etPhone"/>
        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:backgroundTint="@color/dark_blue"
            android:inputType="number"
            android:autofillHints="phone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:text="@string/passwordTxt"
            android:labelFor="@id/etPassword"
            android:layout_marginTop="15dp"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:backgroundTint="@color/dark_blue"
            android:inputType="textPassword"
            android:autofillHints="password"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:text="@string/confirmPassword"
            android:labelFor="@id/etPasswordConfirm"
            android:layout_marginTop="15dp"/>
        <EditText
            android:id="@+id/etPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:backgroundTint="@color/dark_blue"
            android:inputType="textPassword"
            android:autofillHints="password"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:text="@string/userBusiness"
            android:labelFor="@+id/etBusiness"/>
        <EditText
            android:id="@+id/etBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:backgroundTint="@color/dark_blue"
            android:inputType="textCapWords"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@color/white"
            android:text="@string/signinBtn"
            android:layout_marginTop="20dp"
            android:background="@drawable/ripple_blue"
            android:padding="5dp"/>
    </LinearLayout>

</LinearLayout>